# sandbox-rust

./: .envrc  Cargo.toml  compose.yml  index.html  main.sql
docker/postgres/init/: create-db.sql
webapi/: Cargo.toml
webapi/src/: db.rs  framework.rs  index.html  lib.rs  main.rs  openapi.rs  openid_connect.rs  settings.rs
webapi/src/db/: openid_connect_states.rs
webapi/src/framework/: cors.rs  env.rs  logger.rs  session.rs  system.rs
webapi/src/openapi/: example_route.rs
webapi/src/openapi/example_route/: root.rs
